force-app/main/default/objects/Contact/fields/Prequalified__c.field-meta.xml
<CustomField>
    <fullName>Prequalified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prequalified?</description>
    <inlineHelpText>Prequalified?</inlineHelpText>
    <label>Prequalified?</label>
    <type>Checkbox</type>
</CustomField>